--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Adaptive Trend Ribbon (Larsson-Style) – Open Indicator Lab</title>
+  <title>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets – Open Indicator Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
@@ -21,10 +24,11 @@
       <a href="../index.html#indicators" class="btn-secondary">← Back to all indicators</a>
     </p>
 
-    <h1>Adaptive Trend Ribbon (Larsson-Style)</h1>
+    <h1>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets</h1>
     <p class="section-intro">
       Dual-moving-average “trend ribbon” for TradingView that lets you experiment with SMMA/EMA/SMA/WMA 
-      pairs and ATR-based neutral zones, inspired by community Larsson-style ribbons but fully open-source.
+      pairs and ATR-based neutral zones, inspired by community Larsson-style ribbons. The indicator is 
+      free to use; the code itself is published as protected on TradingView.
     </p>
 
     <div class="doc-actions">
@@ -33,6 +37,15 @@
         Open on TradingView
       </a>
     </div>
+
+    <!-- OPTIONAL: TradingView embed chart.
+         On TradingView, use the "Share" / "Embed" option to copy the iframe snippet,
+         then paste it inside the div below. -->
+    <!--
+    <div class="tv-embed">
+      [PASTE YOUR TRADINGVIEW EMBED <iframe> HERE]
+    </div>
+    -->
 
     <h2>Overview</h2>
     <p>
@@ -43,8 +56,8 @@
     </p>
     <p>
       This script does <strong>not</strong> replicate, reverse-engineer, or replace any closed-source indicator. 
-      Instead, it provides a flexible, open-source framework that lets traders build their own 
-      trend-ribbon configuration inspired by similar visual concepts while maintaining full transparency.
+      Instead, it provides a flexible framework that lets traders build their own trend-ribbon configuration 
+      inspired by similar visual concepts while maintaining full transparency on inputs and behavior. 
       Because the calculations rely only on standard moving-average and ATR methods, you can experiment 
       freely with community-discussed presets without relying on proprietary tools.
     </p>
@@ -62,7 +75,7 @@
       <li>Supports ATR-based neutral zone filtering to highlight choppy conditions.</li>
       <li>Supports optional bar coloring by trend state.</li>
       <li>Works on any market and timeframe.</li>
-      <li>Fully open-source and customizable.</li>
+      <li>Free public indicator; code is protected on TradingView.</li>
     </ul>
 
     <h2>Why This Script Is Useful</h2>
@@ -103,9 +116,9 @@
 
     <h2>Important Notes</h2>
     <ul>
-      <li>This script is original, open-source, and not affiliated with any commercial indicator or author.</li>
+      <li>The indicator is free to use on TradingView; the source code is protected.</li>
       <li>It does not reproduce, imitate, or reverse-engineer any closed-source logic.</li>
-      <li>All computations are standard MA/ATR methods for clarity and transparency.</li>
+      <li>All computations rely on standard moving-average and ATR concepts.</li>
     </ul>
 
     <h2>Disclaimer</h2>
