--- a/indicators/blended-net-liquidity-correlation.html
+++ b/indicators/blended-net-liquidity-correlation.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>Blended Net Liquidity Correlation – Open Indicator Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
@@ -23,8 +26,9 @@
 
     <h1>Blended Net Liquidity Correlation</h1>
     <p class="section-intro">
-      An open-source macro tool that builds a blended net-liquidity model from FRED data and 
-      measures how strongly that liquidity has moved with price across multiple time windows.
+      A free macro tool that builds a blended net-liquidity model from FRED data and 
+      measures how strongly that liquidity has moved with price across multiple time windows. 
+      The indicator is free to use on TradingView; the script is protected.
     </p>
 
     <div class="doc-actions">
@@ -33,6 +37,8 @@
         Open on TradingView
       </a>
     </div>
+
+    <!-- OPTIONAL: TradingView embed iframe can go here, same as in the other doc -->
 
     <h2>Overview</h2>
     <p>
@@ -43,9 +49,9 @@
     </p>
     <p>
       This script does not replicate or reverse-engineer any commercial macro indicator. Instead, it provides 
-      a fully open-source, flexible structure for exploring how different liquidity components interact, and 
-      how those liquidity dynamics correlate with market price across various time windows. All data comes 
-      from standard FRED series, and all calculations are fully disclosed for complete transparency.
+      a flexible structure for exploring how different liquidity components interact, and how those liquidity 
+      dynamics correlate with market price across various time windows. All data comes from standard FRED series, 
+      and all calculations are described at a high level for transparency.
     </p>
 
     <h2>What the Script Does</h2>
@@ -72,11 +78,11 @@
       <li>Makes it easy to visually compare liquidity swings with price structure.</li>
     </ul>
 
-    <h3>4. Maintains complete transparency</h3>
+    <h3>4. Maintains clarity and flexibility</h3>
     <ul>
       <li>All data is sourced from public FRED datasets.</li>
-      <li>No proprietary formulas or hidden signals.</li>
-      <li>Designed for research, modification, and extension.</li>
+      <li>No proprietary external data feeds.</li>
+      <li>Designed for research, modification of settings, and hypothesis testing.</li>
     </ul>
 
     <h2>Why This Script Is Useful</h2>
@@ -92,13 +98,13 @@
     </ol>
     <p>
       It’s most useful for macro-focused traders, swing traders, crypto/macro analysts, and anyone who wants 
-      a transparent way to integrate liquidity into their framework.
+      a transparent way to integrate liquidity into their framework without buying expensive black-box tools.
     </p>
 
     <h2>What This Script Is Not</h2>
     <ul>
       <li>Not a recreation of any commercial macro model.</li>
-      <li>Not financial advice or a predictive tool.</li>
+      <li>Not financial advice or a predictive “signal” tool.</li>
       <li>Not a proprietary liquidity algorithm.</li>
       <li>All calculations rely solely on publicly available FRED time series.</li>
     </ul>
