--- a/index.html
+++ b/index.html
@@ -4,101 +4,106 @@
   <meta charset="UTF-8" />
   <title>Open Indicator Lab – Free Trading Indicator Docs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Investopedia-style body font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
   <header class="site-header">
-    <div class="logo">
-      <a href="index.html">Open Indicator Lab</a>
+    <div class="container">
+      <div class="logo"><a href="index.html">Open Indicator Lab</a></div>
+      <nav class="nav">
+        <a href="#hero">Home</a>
+        <a href="#indicators">Indicators</a>
+        <a href="#about">About</a>
+      </nav>
     </div>
-    <nav class="nav">
-      <a href="#hero">Home</a>
-      <a href="#indicators">Indicators</a>
-      <a href="#about">About</a>
-    </nav>
   </header>
 
   <section id="hero" class="hero">
-    <div class="hero-inner">
-      <h1>Open, Transparent Trading Indicators</h1>
-      <p>
-        A quiet corner of the internet for traders who prefer clear logic over paywalls. 
-        Every indicator here is free to use on TradingView and comes with plain-English documentation, 
-        transparent inputs, and a direct link to the official script page.
-      </p>
-      <a href="#indicators" class="btn-primary">Browse indicators</a>
+    <div class="container">
+      <div class="hero-inner">
+        <h1>Open, Transparent Trading Indicators</h1>
+        <p>
+          A quiet corner of the internet for traders who prefer clear logic over paywalls. Every indicator here is
+          free to use on TradingView and comes with plain-English documentation, transparent inputs, and a direct link
+          to the official script page.
+        </p>
+        <a href="#indicators" class="btn-primary">Browse indicators</a>
+      </div>
     </div>
   </section>
 
   <main>
-    <!-- INDICATOR CARDS -->
     <section id="indicators" class="section">
-      <h2>Indicators</h2>
-      <p class="section-intro">
-        Start with the tools below, then drill into each indicator’s dedicated page for setup, interpretation, and best practices.
-      </p>
-      <div class="cards">
-        <!-- Indicator 1 -->
-        <article class="card">
-          <h3>Adaptive Trend Ribbon (Larsson-Style)</h3>
-          <p class="tagline">
-            Dual MA trend ribbon with SMMA/EMA options and ATR neutral zones — a free Larsson-style ribbon for TradingView.
-          </p>
-          <ul class="pill-list">
-            <li>Trend</li>
-            <li>Overlay</li>
-            <li>SMMA / EMA</li>
-            <li>ATR filter</li>
-          </ul>
-          <a href="indicators/adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">Learn more</a>
-        </article>
+      <div class="container">
+        <h2>Indicators</h2>
+        <p class="section-intro">
+          Start with the tools below, then drill into each indicator’s dedicated page for setup, interpretation, and best practices.
+        </p>
 
-        <!-- Indicator 2 -->
-        <article class="card">
-          <h3>Blended Net Liquidity Correlation</h3>
-          <p class="tagline">
-            Customizable net-liquidity model built from FRED data, with multi-window correlation between liquidity and price.
-          </p>
-          <ul class="pill-list">
-            <li>Macro</li>
-            <li>Liquidity</li>
-            <li>FRED data</li>
-            <li>Correlation table</li>
-          </ul>
-          <a href="indicators/blended-net-liquidity-correlation.html" class="btn-secondary">Learn more</a>
-        </article>
+        <div class="cards">
+          <article class="card">
+            <h3>Adaptive Trend Ribbon (Larsson-Style)</h3>
+            <p class="tagline">
+              Dual MA trend ribbon with SMMA/EMA options and ATR neutral zones — a free Larsson-style ribbon for TradingView.
+            </p>
+            <ul class="pill-list">
+              <li>Trend</li>
+              <li>Overlay</li>
+              <li>SMMA / EMA</li>
+              <li>ATR filter</li>
+            </ul>
+            <div class="card-actions">
+              <a href="indicators/adaptive-dual-ma-trend-ribbon.html" class="btn-secondary">Learn more</a>
+            </div>
+          </article>
+
+          <article class="card">
+            <h3>Blended Net Liquidity Correlation</h3>
+            <p class="tagline">
+              Customizable net-liquidity model built from FRED data, with multi-window correlation between liquidity and price.
+            </p>
+            <ul class="pill-list">
+              <li>Macro</li>
+              <li>Liquidity</li>
+              <li>FRED data</li>
+              <li>Correlation table</li>
+            </ul>
+            <div class="card-actions">
+              <a href="indicators/blended-net-liquidity-correlation.html" class="btn-secondary">Learn more</a>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
 
-    <!-- ABOUT -->
     <section id="about" class="section">
-      <h2>About Open Indicator Lab</h2>
-      <p>
-        Most trading indicator pages are built to sell you something or hide the logic behind buzzwords. 
-        Open Indicator Lab is the opposite: it documents useful tools for traders in a clean, neutral format, 
-        with a focus on clarity instead of hype.
-      </p>
-      <p>
-        The goal is to explain what an indicator actually does, where it tends to help, and where it can mislead you — 
-        so you can decide whether it belongs in <em>your</em> process. Part of that is giving traders free, well-documented 
-        alternatives to expensive “secret sauce” indicators that often boil down to transparent math or standard data.
-      </p>
-      <p>
-        Indicators here are free to use on TradingView. Many of them are published as protected scripts 
-        (the code itself isn’t exposed), but inputs, behavior, and use-cases are documented as openly as possible. 
-        Nothing on this site is financial advice, a signal service, or a guarantee of performance.
-      </p>
+      <div class="container">
+        <h2>About Open Indicator Lab</h2>
+        <p>
+          Most trading indicator pages are built to sell you something or hide the logic behind buzzwords. Open Indicator Lab is the opposite:
+          it documents useful tools for traders in a clean, neutral format, with a focus on clarity instead of hype.
+        </p>
+        <p>
+          The goal is to explain what an indicator actually does, where it tends to help, and where it can mislead you — so you can decide whether it belongs
+          in your process. Part of that is giving traders free, well-documented alternatives to expensive “secret sauce” indicators that often boil down to
+          transparent math or standard data.
+        </p>
+        <p>
+          Indicators here are free to use on TradingView. Many of them are published as protected scripts (the code itself isn’t exposed), but inputs, behavior,
+          and use-cases are documented as openly as possible. Nothing on this site is financial advice, a signal service, or a guarantee of performance.
+        </p>
+      </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <p>
-      © <span id="year"></span> Open Indicator Lab – free TradingView indicators, minus the sales pitch.
-    </p>
+    <div class="container">
+      <p>© <span id="year"></span> Open Indicator Lab – free TradingView indicators, minus the sales pitch.</p>
+    </div>
   </footer>
 
   <script>
