--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <title>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets – Open Indicator Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Source+Serif+4:wght@600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
@@ -21,6 +23,8 @@
       </nav>
     </div>
   </header>
+
+  <div class="top-shelf" aria-hidden="true"></div>
 
   <main class="section section-doc">
     <div class="container">
@@ -44,7 +48,7 @@
       <h2>How Traders Recreate This Without the Indicator</h2>
 
       <p>
-        At its core, many so-called “Larsson-style” trend ribbons are based on a very simple idea:
+        At its core, the different “Larsson-style” trend ribbons are based on a very simple idea:
         plotting two smoothed moving averages and observing how they interact over time.
       </p>
 
@@ -97,19 +101,6 @@
         <li>Works on any market and timeframe.</li>
         <li>Free public indicator; code is protected on TradingView.</li>
       </ul>
-
-      <h2>Why This Script Is Useful</h2>
-      <p>
-        Traditional moving averages identify trend direction but often lack context during uncertain or low-momentum conditions.
-        This ribbon adds structure in a few ways:
-      </p>
-
-      <ol>
-        <li>Allows multiple smoothing techniques (SMMA / EMA / SMA / WMA).</li>
-        <li>Highlights clearer transitions between bullish, bearish, and neutral phases.</li>
-        <li>Uses ATR to flag low-confidence, sideways periods.</li>
-        <li>Provides a visually intuitive band instead of a single line.</li>
-      </ol>
 
       <h2>Disclaimer</h2>
       <p>
