--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Open Indicator Lab – Forever Free Trading Indicators</title>
+  <title>Open Indicator Lab – Free Indicators</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Font stack: Graphik/Publico if you have them, otherwise Inter + Source Serif 4 -->
+  <!-- Fallback fonts only (Publico is assumed installed or self-hosted later) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Source+Serif+4:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -25,13 +25,12 @@
     </div>
   </header>
 
-  <!-- hollow / paper shelf -->
   <div class="top-shelf" aria-hidden="true"></div>
 
   <section id="hero" class="hero">
     <div class="container">
       <div class="hero-inner">
-        <h1>Forever Free Trading Indicators</h1>
+        <h1>Free Indicators. No Pitch.</h1>
         <p>
           A quiet corner of the internet for traders who prefer clear logic over paywalls. Every indicator here is
           free to use on TradingView and comes with plain-English documentation, transparent inputs, and a direct link
