--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <title>Open Indicator Lab – Free Indicators</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Fallback fonts only (Publico is assumed installed or self-hosted later) -->
+  <!-- Lato -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css" />
+  <!-- cache-bust so changes show immediately -->
+  <link rel="stylesheet" href="styles.css?v=3" />
 </head>
 <body>
 
   <header class="site-header">
-    <div class="container">
+    <div class="header-inner">
       <div class="logo"><a href="index.html">Open Indicator Lab</a></div>
       <nav class="nav">
         <a href="#hero">Home</a>
