--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Open Indicator Lab – Free Indicators</title>
+  <title>Open Indicator Lab – Indicators</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Lato -->
@@ -10,8 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <!-- cache-bust so changes show immediately -->
-  <link rel="stylesheet" href="styles.css?v=3" />
+  <link rel="stylesheet" href="styles.css?v=1001" />
 </head>
 <body>
 
@@ -95,11 +94,11 @@
         </p>
         <p>
           The goal is to explain what an indicator actually does, where it tends to help, and where it can mislead you — so you can decide whether it belongs
-          in your process. Part of that is giving traders free, well-documented alternatives to expensive “secret sauce” indicators that often boil down to
+          in your process. Part of that is giving traders well-documented alternatives to expensive “secret sauce” indicators that often boil down to
           transparent math or standard data.
         </p>
         <p>
-          Indicators here are free to use on TradingView. Many of them are published as protected scripts (the code itself isn’t exposed), but inputs, behavior,
+          Indicators here are free to use on TradingView. Many are published as protected scripts (the code itself isn’t exposed), but inputs, behavior,
           and use-cases are documented as openly as possible. Nothing on this site is financial advice, a signal service, or a guarantee of performance.
         </p>
       </div>
@@ -108,7 +107,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> Open Indicator Lab – free TradingView indicators, minus the sales pitch.</p>
+      <p>© <span id="year"></span> Open Indicator Lab</p>
     </div>
   </footer>
 
