--- a/indicators/adaptive-dual-ma-trend-ribbon.html
+++ b/indicators/adaptive-dual-ma-trend-ribbon.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Adaptive Dual MA Trend Ribbon Community “Larsson-Style” Presets – Open Indicator Lab</title>
+  <title>Adaptive Dual MA Trend Ribbon – Docs | Open Indicator Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Lato -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Source+Serif+4:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="../styles.css?v=1001" />
 </head>
 <body>
 
   <header class="site-header">
-    <div class="container">
+    <div class="header-inner">
       <div class="logo"><a href="../index.html">Open Indicator Lab</a></div>
       <nav class="nav">
         <a href="../index.html#hero">Home</a>
@@ -86,33 +87,12 @@
         Instead, it provides a flexible framework that lets traders build their own trend-ribbon configuration inspired by similar visual concepts.
       </p>
 
-      <h2>What the Script Does</h2>
-      <ul>
-        <li>Plots Fast and Slow moving averages using SMMA (RMA), EMA, SMA, or WMA.</li>
-        <li>Colors the ribbon to show directional bias:
-          <ul>
-            <li><strong>Bullish</strong> when Fast MA &gt; Slow MA</li>
-            <li><strong>Bearish</strong> when Fast MA &lt; Slow MA</li>
-            <li><strong>Neutral</strong> when the difference is small (optional ATR filter)</li>
-          </ul>
-        </li>
-        <li>Supports ATR-based neutral zone filtering to highlight choppy conditions.</li>
-        <li>Supports optional bar coloring by trend state.</li>
-        <li>Works on any market and timeframe.</li>
-        <li>Free public indicator; code is protected on TradingView.</li>
-      </ul>
-
-      <h2>Disclaimer</h2>
-      <p>
-        This indicator is provided for educational and analytical purposes only. Always test settings thoroughly and apply proper risk management before trading live.
-      </p>
-
     </div>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> Open Indicator Lab</p>
+      <p>© <span id="year"></span> Adaptive Dual MA Trend Ribbon – Docs | Open Indicator Lab</p>
     </div>
   </footer>
 
